# tsurugi-graph

./: BENCHMARK.md  README.md  README_en.md
docs/adr/: 0002-property-index.md
graph-service/: .gitignore  CMakeLists.txt  README.md
graph-service/bench/: comparative_bench.py  concurrent_bench.cpp  graph_bench.cpp  load_test.cpp  real_bench.cpp
graph-service/docs/adr/: 0001-graph-engine-architecture.md  0003-query-cache.md  0004-batch-property-reads.md  0005-parallel-query-execution.md  0006-unwind-bulk-insert.md  0007-inverted-property-index.md  0008-epoch-tuning.md  0009-optimistic-index-write.md  0010-range-property-index.md  0011-query-template-cache.md  0012-streaming-executor.md  0013-sortable-numeric-key.md
graph-service/include/tateyama/framework/graph/: cypher_parser.h  resource.h  service.h  storage.h
graph-service/include/tateyama/framework/graph/core/: ast.h  executor.h  parser.h  query_cache.h
graph-service/proto/tateyama/proto/graph/: request.proto  response.proto
graph-service/src/tateyama/framework/graph/: cypher_parser.cpp  resource.cpp  service.cpp  storage.cpp
graph-service/src/tateyama/framework/graph/core/: executor.cpp  parser.cpp
graph-service/test/glog/: logging.h
graph-service/test/sharksfin/: api.h
graph-service/test/tateyama/framework/: component.h  component_ids.h  environment.h  repository.h  resource.h
graph-service/test/tateyama/framework/graph/: executor_advanced_test.cpp  executor_batch_test.cpp  executor_coverage_test.cpp  executor_test.cpp  match_label_test.cpp  parser_coverage_test.cpp  parser_edge_test.cpp  parser_full_test.cpp  parser_property_test.cpp  parser_standalone_test.cpp  query_cache_test.cpp  retry_test.cpp  service_full_test.cpp  service_test.cpp  sharksfin_mock.h  storage_coverage_test.cpp  storage_iterator_test.cpp  storage_label_test.cpp  storage_navigation_test.cpp  storage_property_test.cpp  storage_standalone_test.cpp  storage_test.cpp
graph-service/test/tateyama/utils/: cache_align.h
